# playground-streamlit-workshop

./: .gitignore  .gitpod.yml  README.md
demo-app/: README.md  pyproject.toml
demo-app/.streamlit/: config.toml
demo-app/scripts/: 00_auth.sh  00_setup.sh  01_run.sh
demo-app/streamlit_app/: home.py  main.py
demo-app/streamlit_app/connections/: ai.py  data.py
demo-app/streamlit_app/demos/: 001_basic_output.py  002_data_output.py  003_flow_control.py  004_user_input.py  005_layout.py
demo-app/streamlit_app/exercises/: 001_forms.py  002_plotting.py  003_genai.py
demo-app/streamlit_app/hackathon/: app.py
demo-app/streamlit_app/solutions/: 001_forms_solution.py  002_plotting_solution.py  003_genai_solution.py
demo-app/streamlit_app/sql_queries/: get_belgian_weather.sql
