[tool.poetry]
name = "streamlit-app"
version = "0.1.0"
description = ""
authors = ["Jonny Daenen <jonnydaenen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.1"
google-cloud-bigquery = "^3.27.0"
google-generativeai = "^0.8.3"
db-dtypes = "^1.3.1"
google-cloud-aiplatform = "^1.78.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
